# MiniStream

./: .gitignore  CMakeLists.txt  README.md  main_receiver.cpp  main_sender.cpp
capture/: capture.cpp  capture.hpp
decode/: decoder.cpp  decoder.hpp
encode/: encoder.cpp  encoder.hpp
transport/: udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
